--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.45.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.6.0",
